[chromium] TextureManager LRU list is not fully honor the order tiles are used https://bugs.webkit.org/show_bug.cgi?id=73344

Patch by Grace Kloba <klobag@chromium.org> on 2011-11-30
Reviewed by James Robinson.

Reorder the texture in the LRU list only when protectTexture() is called.

* platform/graphics/chromium/TextureManager.cpp:
(WebCore::TextureManager::hasTexture):
(WebCore::TextureManager::protectTexture):

Canonical link: https://commits.webkit.org/90058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101586 268f45cc-cd09-0410-ab3c-d52691b4dbfc